--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@types/webpack-env": "1.13.5",
     "babel-loader": "^7.1.3",
     "css-loader": "^0.28.10",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "extract-text-webpack-plugin": "^4.0.0-alpha.0",
     "file-loader": "^1.1.11",
     "html-loader": "^1.0.0-alpha.0",
     "html-webpack-plugin": "^3.0.4",
@@ -43,7 +43,7 @@
     "ts-loader": "^4.0.0",
     "typescript": "^2.7.2",
     "url-loader": "^1.0.0-beta.0",
-    "webpack": "^4.0.1",
+    "webpack": "^4.8.2",
     "webpack-cleanup-plugin": "^0.5.1",
     "webpack-cli": "^2.0.10",
     "webpack-dev-server": "^3.1.0"
